--- a/index.html
+++ b/index.html
@@ -80,31 +80,32 @@
         <p>Learn more about me</p>
       </div>
 
-      <div class="row">
-        <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/me.jpg" class="img-fluid" alt="">
-        </div>
-        <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>UI/UX &amp; Graphic Designer</h3>
-          <p class="fst-italic">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua.
-          </p>
-          <div class="row">
-            <div class="col-lg-6">
-              <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
-              </ul>
-            </div>
-            <div class="col-lg-6">
-              <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+      <div class="section-title">
+  <h2>關於我</h2>
+  <p>更多關於我</p>
+</div>
+
+<div class="row">
+  <div class="col-lg-4" data-aos="fade-right">
+    <img src="assets/img/me.jpg" class="img-fluid" alt="">
+  </div>
+  <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+    <h3>一位六和高中的學生</h3>
+    <p class="fst-italic">
+      大家好，我是一位六和高中的學生，正在努力學習中。
+    </p>
+    <div class="row">
+      <div class="col-lg-6">
+        <ul>
+          <li><i class="bi bi-chevron-right"></i> <strong>生日:</strong> <span>2008年3月15日</span></li>
+          <li><i class="bi bi-chevron-right"></i> <strong>興趣:</strong> <span>打籃球、看電影、玩遊戲</span></li>
+          <li><i class="bi bi-chevron-right"></i> <strong>家鄉:</strong> <span>新北市</span></li>
+        </ul>
+      </div>
+      <div class="col-lg-6">
+        <ul>
+          <li><i class="bi bi-chevron-right"></i> <strong>年齡:</strong> <span>15歲</span></li>
+          <li><i class="bi bi-chevron-right"></i> <strong>學校:</strong> <span>六和高中</span></
               </ul>
             </div>
           </div>
