--- a/index.html
+++ b/index.html
@@ -97,21 +97,20 @@
     <div class="row">
       <div class="col-lg-6">
         <ul>
-          <li><i class="bi bi-chevron-right"></i> <strong>生日:</strong> <span>2008年3月15日</span></li>
-          <li><i class="bi bi-chevron-right"></i> <strong>興趣:</strong> <span>打籃球、看電影、玩遊戲</span></li>
-          <li><i class="bi bi-chevron-right"></i> <strong>家鄉:</strong> <span>新北市</span></li>
+          <li><i class="bi bi-chevron-right"></i> <strong>生日:</strong> <span>2007年7月28日</span></li>
+          <li><i class="bi bi-chevron-right"></i> <strong>興趣:</strong> <span>聽音樂、看電影、玩遊戲</span></li>
+          <li><i class="bi bi-chevron-right"></i> <strong>家鄉:</strong> <span>桃園市</span></li>
         </ul>
       </div>
       <div class="col-lg-6">
         <ul>
-          <li><i class="bi bi-chevron-right"></i> <strong>年齡:</strong> <span>15歲</span></li>
+          <li><i class="bi bi-chevron-right"></i> <strong>年齡:</strong> <span>16歲</span></li>
           <li><i class="bi bi-chevron-right"></i> <strong>學校:</strong> <span>六和高中</span></
               </ul>
             </div>
           </div>
           <p>
-            Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-            Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+            人生中最重要的事情之一，就是學會如何面對挑戰和困難。當我們面對逆境時，不要放棄，要堅持下去，因為只有這樣才能成長和進步。同時，我們也要學會欣賞生活中的美好，珍惜身邊的人和事，讓自己的生命充滿愛和感激。
           </p>
         </div>
       </div>
