--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
   <header id="header">
     <div class="container">
 
-      <h1><a href="index.html">Peaky Blinders</a></h1>
+      <h1><a href="index.html">henry</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>graphic designer</span> from Taiwan</h2>
+      <h2>I'm a carefulness <span>student</span> from Taiwan</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -74,11 +74,6 @@
 
     <!-- ======= About Me ======= -->
     <div class="about-me container">
-
-      <div class="section-title">
-        <h2>About</h2>
-        <p>Learn more about me</p>
-      </div>
 
       <div class="section-title">
   <h2>關於我</h2>
